--- a/词法分析.md
+++ b/词法分析.md
@@ -75,5 +75,88 @@ createServer((req, res) => {
    antlr4.tree.ParseTreeWalker.DEFAULT.walk(htmlChat, tree);
 ```
 
+
+
+## 一个简易的 auto-completion 例子
+
+```js
+let input = CharStreams.fromString(code);
+let lexer = new KotlinLexer(input);
+let parser = new KotlinParser(new CommonTokenStream(lexer));
+parser.kotlinFile();
+let index = /* we’ll show how to compute this later */;
+let core = new CodeCompletionCore(parser);
+let candidates = core.collectCandidates(index);
+```
+
+
+
 ### Determining the Position of the Caret（确定插入符号的位置）
 
+我们传递给 completion engine 的 index，表示 token 在 inputStream 中的位置
+
+我们将插入符号在文档中的位置表示为两个坐标：行和列。考虑到ANTLR解析器的[工作方式，使用单个数字（字符在输入流中的位置）会更简单](https://tomassetti.me/antlr-mega-tutorial/);然而，使用行和列允许更容易地与语言服务器协议集成，并且通常可能与编辑器集成。
+
+```js
+export type CaretPosition = { line: number, column: number };
+export function computeTokenIndex(parseTree: ParseTree, caretPosition: CaretPosition): number {
+    if(parseTree instanceof TerminalNode) {
+        return computeTokenIndexOfTerminalNode(parseTree, caretPosition);
+    } else {
+        return computeTokenIndexOfChildNode(parseTree, caretPosition);
+    }
+}
+```
+
+
+
+```js
+function computeTokenIndexOfTerminalNode(parseTree: TerminalNode, caretPosition: CaretPosition) {
+    let start = parseTree.symbol.charPositionInLine;
+    let stop = parseTree.symbol.charPositionInLine + parseTree.text.length;
+    if (parseTree.symbol.line == caretPosition.line && start <= caretPosition.column && stop >= caretPosition.column) {
+        return parseTree.symbol.tokenIndex;
+    } else {
+        return undefined;
+    }
+}
+
+function computeTokenIndexOfChildNode(parseTree: ParseTree, caretPosition: CaretPosition) {
+    for (let i = 0; i < parseTree.childCount; i++) {
+        let index = computeTokenIndex(parseTree.getChild(i), caretPosition);
+        if (index !== undefined) {
+            return index;
+        }
+    }
+    return undefined;
+}
+```
+
+
+
+### Computing Code Suggestions（计算建议）
+
+现在我们知道如何计算一个 index ，让我们回到原先的代码位置
+
+```js
+let candidates = core.collectCandidates(index);
+```
+
+`collectCandidates`方法方法以 `CandidatesCollection` 类型的对象的形式，返回给定位置（token index）的潜在补语的列表。这包括两种类型的结果，令牌和规则。
+
+```typescript
+class CandidatesCollection {
+    tokens: Map<number, TokenList>;
+    rules: Map<number, RuleList>;
+}
+```
+
+大部分情况下，我们可以直接提供 suggestion
+
+```js
+let completions = []; 
+candidates.tokens.forEach((_, k) => completions.push(parser.vocabulary.getSymbolicName(k).toLowerCase()));
+return completions;
+```
+
+## 排除某些情况
